--- a/src/application/static/css/main.css
+++ b/src/application/static/css/main.css
@@ -6,3 +6,118 @@
 .nowrap { white-space: nowrap; }
 
 /* Your customizations here */
+
+html {
+  overflow: hidden;
+}
+.background-image {
+  z-index: -1;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: url(../img/52nd_2.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+  opacity: .99;
+}
+
+.centerblock {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 18em;
+    height: 8em;
+    margin-left: -9em;
+    margin-top: -4em;
+
+    /*background-color: Green;*/
+}
+
+h1 {
+  font-family: 'Poiret One', cursive;
+  font-size: 5em;
+}
+
+.center-top {
+  position: absolute;
+  left: 50%;
+  top: 15%;
+  width: 50%;
+  height: 6em;
+  margin-left: -25%;
+  text-align: center;
+  color: #fff;
+
+}
+
+.signupbutton {
+  box-sizing: border-box;
+  
+  -webkit-font-smoothing: antialiased;
+  transition: background .33s cubic-bezier(0.23,1,.32,1);
+  transition-property: background;
+  transition-duration: 0.33s;
+  transition-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
+  transition-delay: initial;
+  text-transform: uppercase;
+  background: 0 0;
+  /*opacity: 0;*/
+  font-size: 1.2em;
+  outline: 0;
+  outline-color: initial;
+  outline-style: initial;
+  outline-width: 0px;
+  padding: 15px 30px;
+  padding-top: 15px;
+  padding-right: 30px;
+  padding-bottom: 15px;
+  padding-left: 30px;
+  border: 2px solid #fff;
+  cursor: pointer;
+  color: #fff;
+  position: relative;
+  left: 25%;
+
+  /* First we need to help some browsers along for this to work.
+     Just because a vendor prefix is there, doesn't mean it will
+     work in a browser made by that vendor either, it's just for
+     future-proofing purposes I guess. */
+  -o-transition:.2s;
+  -ms-transition:.2s;
+  -moz-transition:.2s;
+  -webkit-transition:.2s;
+  /* ...and now for the proper property */
+  transition:.2s;
+  margin-bottom: 0;
+}
+
+button:hover { background-color:rgba(255, 255, 255, .1); }
+
+input[type="email"] {
+  /*font-family: 'Gotham Rounded SSm A','Gotham Rounded SSm B';*/
+  /*font: 11px/normal '.HelveticaNeueDeskInterface-Regular';*/
+  color: #fff;
+  left: 50%;
+  width: 14em;
+  margin-left: -4em;
+  height: 30px;
+  background: 0 0;
+  background-color: rgba(255, 255, 255, .1);
+  border: 1px solid #fff;
+  border-radius: 0;
+  text-align: center;
+}
+
+prependedInput:target {
+  width = 16em;
+  margin-left = 0
+}
