--- a/src/application/static/css/main.css
+++ b/src/application/static/css/main.css
@@ -17,17 +17,12 @@ html {
   top: 0;
   width: 100%;
   height: 100%;
-  background: url(../img/52nd_2.jpg) no-repeat center center fixed;
+  background: url(../img/52nd_2_blur.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
-  opacity: .99;
+  /*opacity: .99;*/
 }
 
 .centerblock {
