--- a/src/application/templates/index.html
+++ b/src/application/templates/index.html
@@ -25,7 +25,10 @@
 
 
     <div class="center-top">
-        <h1> NYC Jazz Digest</h1>
+        <h1>NYC Jazz Digest</h1>
+    </div>
+    <div class="center-middle">
+        <h3>Get weekly emails with details about the coolest jazz concerts in NYC</h3>
     </div>
     {% block content %}
     {% with messages = get_flashed_messages() %}
